# andi

./: .clang-format  .gitignore  .travis.yml  10T0.01  10T0.05  10T0.10  10T0.15  10T0.20  12.fasta  1M.10  1k.01  1k_0.2  200_0.1  Doxyfile  Makefile  Makefile.am  README.md  callgrind.out.5431  callgrind.out.7576  callgrind.out.7682  callgrind.out.7744  callgrind.out.7809  callgrind.out.7884  callgrind.out.7913  configure  configure.ac  eco29.out  eco29_diagnostics.out  gmon.out  gprof.out  hist.sh  index.html  np  seq3  suff.txt
debian/: README.Debian  README.source  andi.cron.d.ex  andi.default.ex  andi.doc-base.EX  andi.substvars  autoreconf.after  autoreconf.before  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch  watch.ex
docs/: Doxyfile  Makefile.am  andi.1  andi.1.in
docs/manual/: andi-manual.tex  references.bib  version.tex.in
docs/manual/img/accuracy/: fig-acc.tex  fig-acc2.tex
docs/manual/img/concurrency/: fig-concurrency.tex
docs/manual/img/eco29/: resources.tex
docs/manual/img/indel/: andi.data  andi_error.data  cophylog.data  cophylog_error.data  fig-error.tex  fig-indel.tex  kr.data  kr_error.data  spaced.data  spaced_error.data
docs/manual/img/recomb/: andi.data  cophylog.data  fig-recomb.tex  kr.data  local.data  local.tex  mugsy.data  spaced.data
docs/manual/img/threshold/: threshold.tex  threshold2.data
libs/: Makefile.am  kseq.h  kseq_test.c  pfasta.c  pfasta.h
libs/RMQ/: Makefile.am  README  README.ps  RMQ.hpp  RMQ_1_n.cpp  RMQ_1_n.hpp  RMQ_n_1_improved.cpp  RMQ_n_1_improved.hpp  RMQ_nlogn_1.cpp  RMQ_nlogn_1.hpp  RMQ_succinct.cpp  RMQ_succinct.hpp  makefile  testRMQ  testRMQ.cpp
libs/libdivsufsort-2.0.1/: configure  configure.ac  libtool
libs/libdivsufsort-2.0.1/examples/: bwt  mksary  sasearch  suftest  unbwt
libs/libdivsufsort-2.0.1/examples/.deps/: bwt.Po  mksary.Po  sasearch.Po  suftest.Po  unbwt.Po
libs/libdivsufsort-2.0.1/lib/: Makefile.am  libdivsufsort.la  libdivsufsort_la-divsufsort.lo  libdivsufsort_la-sssort.lo  libdivsufsort_la-trsort.lo  libdivsufsort_la-utils.lo
libs/libdivsufsort-2.0.1/lib/.deps/: libdivsufsort_la-divsufsort.Plo  libdivsufsort_la-sssort.Plo  libdivsufsort_la-trsort.Plo  libdivsufsort_la-utils.Plo
libs/libdivsufsort-2.0.1/lib/.libs/: libdivsufsort.la  libdivsufsort.lai
opt/: Makefile.am  compat-stdlib.h  compat-string.h  reallocarray.c  strchrnul.c
opt/psufsort/: Makefile.am  c_interface.cxx  interface.h  psufsort.cxx
scripts/: Makefile.am  _andi  failed.zsh  maf2phy.awk  vmatch.sh
src/: Makefile  Makefile.am  andi.c  andi.cpp  config.hin  dist_hack.h  divergence.c  divergence.h  esa.c  esa.cpp  esa.h  global.h  io.c  io.cpp  io.h  model.c  model.h  np.c  process.c  process.cpp  process.h  sequence.c  sequence.cpp  sequence.h
test/: Makefile.am  extra.sh  join.sh  low_homo.sh  matrix.py  nan.sh  simple.py  test_esa.c  test_esa.cxx  test_extra.sh  test_fasta.cxx  test_join.sh  test_process.c  test_random.sh  test_seq.c  test_seq.cxx  test_simple.py  xfail_low_homo.sh  xfail_nan.sh
